--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "201f147a-23d5-4da9-8a50-0c62c284a044"
 authors = ["Zenna Tavares <Zennatavares@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+Cassette = "7057c7e9-c182-5462-911a-8362d720325c"
+
 [compat]
 julia = "1"
 
